--- a/index_1.html
+++ b/index_1.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-
+    <a href="user.html">Go to User management</a>
     <div class="container">
         <div class="header">
             Register form
@@ -39,7 +39,7 @@
                 <input name="gender" type="radio" value="หญิง" > หญิง
             </div>
             <div>
-                <input name="gender" type="radio" value="อื่นๆ" > อื่นๆ
+                <input name="gender" type="radio" value="อื่นๆ" > ไม่ระบุ
             </div>
         </div>
     </div>
