--- a/user.html
+++ b/user.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index_1.html">Back to register</a>
-    User management page
-    <div id="user"></div>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <script src="user.js"></script>
+    <a href="index_1.html" class="button-go">Back to register</a>
+    <div class="container">
+        <h1 class="header">User management page</h1>
+        <table id="user-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Age</th>
+                    <th>Sex</th>
+                    <th>Description</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="user"></tbody>
+        </table>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+        <script src="user.js"></script>
+    </div>
 </body>
 </html>
