--- a/index_1.html
+++ b/index_1.html
@@ -10,7 +10,7 @@
 <body>
     <a href="user.html" class="button-go">Go to User management</a>
     <div class="container">
-        <div class="header">
+        <div class="register-header">
             Register form
         </div>
 
